# binomena

./: .gitignore  BINOMENA_WHITEPAPER.md  Dockerfile  ENV_CONFIG.md  LICENSE  README.md  SECURITY.md  THREADED_EXECUTION.md  cors.go  fix_imports.sh  go.mod  go.sum  main.go  render.yaml  run_nodes.sh  run_tests.sh  start.sh  wasm_base64.txt  wasm_base64_fixed.txt
audit/: audit.go  audit_db.go
cmd/: optimize_production.go
consensus/: dpos.go  nodeswift.go
contracts/: AdNe1e77857b790cf352e57a20c704add7ce86db6f7dc5b7d14cbea95cfffe0d.json  asconfig.json  package.json
contracts/stablecoin/: .gitignore  BLOCKCHAIN_DEPLOYMENT.md  Cargo.toml  DEPLOYMENT.md  MIGRATION.md  QUICKSTART.md  README.md  SECURITY_FIX.md  build.sh  deploy-binomena.sh  deploy-mainnet.sh  deploy-mock.sh  deploy.sh  deployment_payload.json  exchange-service.md  initialize-contract.sh  package.json  paprd-admin.sh  paprd-api-server.js  paprd-ledger.json  paprd-ui-integration.js  paprd_contract.base64  paprd_contract_info.json  setup.sh  simple-paprd.rs  wallet-dashboard.sh
contracts/stablecoin/src/: context.rs  errors.rs  events.rs  lib.rs  stablecoin.rs  storage.rs
core/: blockchain.go  blockchain_db.go  execution_engine.go  execution_engine_test.go  node.go  protocol.go  transaction.go  transaction_test.go  transaction_utils.go
database/: database.go
examples/: threaded_execution_demo.go  token_contract.ts
p2p/: node.go
smartcontract/: api.go  security.go  state.go  storage.go  storage_db.go  transaction.go  vm.go  vm_test.go
supernom/: DEPLOYMENT_INSTRUCTIONS.md  LICENSE  README.md  (+4 more)
(+28 files in other folders)
