[package]
name = "paper-dollar-stablecoin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.0", features = ["derive"] }

# WebAssembly interface
wasm-bindgen = "0.2"

# Error handling
thiserror = "1.0"

# Collections
indexmap = "2.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"] 